VCST-352: fix scrollbar style for popup message (#2754)

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_dialogs.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_dialogs.sass
@@ -53,12 +53,14 @@
     &__dialog-message
         flex-grow: 1
         max-height: 300px
-        overflow: scroll
+        overflow: auto
+        scrollbar-color: transparent transparent
         &::-webkit-scrollbar
             background-color: transparent
         &::-webkit-scrollbar-thumb
             background-color: transparent
         &:hover
+            scrollbar-color: $scrollThumbColor $scrollTrackColor
             &::-webkit-scrollbar
                 background-color: $scrollTrackColor
             &::-webkit-scrollbar-thumb
